[gd_scene load_steps=11 format=3 uid="uid://8e8vmwfilpu3"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_lxpdn"]
[ext_resource type="Texture2D" uid="uid://dl7dwgygnud0" path="res://resources/graphics/player/player.png" id="2_cxngf"]
[ext_resource type="Texture2D" uid="uid://bcruwhory7e0s" path="res://resources/graphics/decals/white.png" id="3_0uetb"]

[sub_resource type="Gradient" id="Gradient_jpm48"]
offsets = PackedFloat32Array(0.0111111, 0.277778, 0.463889, 0.708333, 1)
colors = PackedColorArray(3, 3, 3, 1, 0.34902, 0.219608, 1, 0.988235, 0.49281, 0.262745, 0.666667, 0.981699, 0.543282, 0.767621, 3.46541e-06, 0.968627, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l1uiw"]
gradient = SubResource("Gradient_jpm48")

[sub_resource type="Curve" id="Curve_s5u2g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_70afw"]
curve = SubResource("Curve_s5u2g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4o22x"]
emission_shape = 1
emission_sphere_radius = 15.0
particle_flag_disable_z = true
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 600.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.8
scale_curve = SubResource("CurveTexture_70afw")
color_ramp = SubResource("GradientTexture1D_l1uiw")

[sub_resource type="CircleShape2D" id="CircleShape2D_gxi1k"]
radius = 65.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_flawh"]
polygon = PackedVector2Array(133, 12, 129, 4, 124, 4, 113, 0, 107, -5, 99, -5, 88, -12, 79, -12, 61, -28, 50, -29, 43, -42, 36, -48, 27, -61, 12, -59, 2, -62, -9, -59, -25, -53, -47, -45, -54, -33, -61, -17, -58, -12, -59, 5, -53, 14, -52, 23, -43, 31, -39, 39, -35, 50, -28, 56, -12, 59, 0, 57, 16, 52, 23, 47, 37, 43, 42, 39, 53, 39, 57, 41, 60, 49, 69, 53, 94, 51, 97, 43, 102, 41, 108, 37, 123, 36, 122, 30, 129, 29, 133, 24)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_lxpdn")

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(131, 19)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(128, 11)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(129, 29)

[node name="gunblow" type="GPUParticles2D" parent="."]
position = Vector2(135, 19)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_4o22x")
texture = ExtResource("3_0uetb")
lifetime = 0.2
one_shot = true
trail_lifetime = 0.11

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("2_cxngf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gxi1k")

[node name="laser_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="grenade_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_flawh")

[connection signal="timeout" from="laser_cooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="grenade_cooldown" to="." method="_on_grenade_cooldown_timeout"]
